--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --hot --mode development --open",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "jest",
     "lint": "eslint src",
@@ -141,8 +141,8 @@
     "typescript": "~4.3.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.1.0",
     "webpackbar": "^5.0.0-3"
   }
 }
