--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
+    "start-linux": "export NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "jest",
     "lint": "eslint src",
