--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_SENTRY_DSN=https://72c5ac13107a49ad8e7e205dd4da7fae@sentry.io/1218345
 REACT_APP_FFLOGS_V1_BASE_URL=https://xivanalysis.com/proxy/fflogs/
 # REACT_APP_FFLOGS_V1_API_KEY=[UNUSED]
-REACT_APP_GQL_ACCESS_TOKEN=
+GQL_ACCESS_TOKEN=
