--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
     "start-linux": "export NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
+    "server": "node server.js",
     "build": "webpack --mode production",
     "test": "jest",
     "lint": "eslint src",
@@ -28,10 +29,12 @@
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "color": "^3.0.0",
+    "cors": "^2.8.5",
     "d3-scale": "^3.2.1",
     "d3-time": "^1",
     "d3-time-format": "^3",
     "es6-error": "^4.1.1",
+    "express": "^4.19.2",
     "intersection-observer": "^0.12",
     "intl": "^1.2.5",
     "ky": "^0.24",
