--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
-    "start-linux": "export NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development",
+    "start-linux": "export NODE_OPTIONS=--openssl-legacy-provider && webpack serve --mode development --no-hot",
     "server": "node server.js",
-    "server-fastify": "node server_fastify.js",
     "build": "webpack --mode production",
     "test": "jest",
     "lint": "eslint src",
@@ -21,8 +20,6 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.12.5",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/formbody": "^7.4.0",
     "@lingui/react": "^2.5.0",
     "@reach/auto-id": "^0.15.0",
     "@sentry/browser": "^6",
@@ -38,7 +35,6 @@
     "d3-time-format": "^3",
     "es6-error": "^4.1.1",
     "express": "^4.19.2",
-    "fastify": "^4.28.1",
     "intersection-observer": "^0.12",
     "intl": "^1.2.5",
     "ky": "^0.24",
